==> 931284932/Roller_Car_2.0/Roller_Car _2.0/Core/Src/myspi.c <==
#include "main.h"

/*引脚配置层*/

/**
  * 函    数：SPI写SS引脚电平
  * 参    数：BitValue 协议层传入的当前需要写入SS的电平，范围0~1
  * 返 回 值：无
  * 注意事项：此函数需要用户实现内容，当BitValue为0时，需要置SS为低电平，当BitValue为1时，需要置SS为高电平
  */
void SPI_W_SS(uint8_t BitValue)
{
	HAL_GPIO_WritePin(GPIOA,GPIO_PIN_8,(GPIO_PinState)BitValue);//根据BitValue，设置SS引脚的电平
}

/**
  * 函    数：SPI写SCK引脚电平
  * 参    数：BitValue 协议层传入的当前需要写入SCK的电平，范围0~1
  * 返 回 值：无
  * 注意事项：此函数需要用户实现内容，当BitValue为0时，需要置SCK为低电平，当BitValue为1时，需要置SCK为高电平
  */
void SPI_W_SCK(uint8_t BitValue)
{
	HAL_GPIO_WritePin(GPIOC, GPIO_PIN_10,(GPIO_PinState)BitValue);		//根据BitValue，设置SCK引脚的电平
}

/**
  * 函    数：SPI写MOSI引脚电平
  * 参    数：BitValue 协议层传入的当前需要写入MOSI的电平，范围0~0xFF
  * 返 回 值：无
  * 注意事项：此函数需要用户实现内容，当BitValue为0时，需要置MOSI为低电平，当BitValue非0时，需要置MOSI为高电平
  */
void SPI_W_MOSI(uint8_t BitValue)
{
	HAL_GPIO_WritePin(GPIOA, GPIO_PIN_15, (GPIO_PinState)BitValue);		//根据BitValue，设置MOSI引脚的电平，BitValue要实现非0即1的特性
}

/**
  * 函    数：I2C读MISO引脚电平
  * 参    数：无
  * 返 回 值：协议层需要得到的当前MISO的电平，范围0~1
  * 注意事项：此函数需要用户实现内容，当前MISO为低电平时，返回0，当前MISO为高电平时，返回1
  */
uint8_t SPI_R_MISO(void)
{
	return HAL_GPIO_ReadPin(GPIOC, GPIO_PIN_11);			//读取MISO电平并返回
}

/**
  * 函    数：SPI初始化
  * 参    数：无
  * 返 回 值：无
  * 注意事项：此函数需要用户实现内容，实现SS、SCK、MOSI和MISO引脚的初始化
  */
void SPI_Init(void)
{
	/*开启时钟*/
	__HAL_RCC_GPIOA_CLK_ENABLE();	//开启GPIOA的时钟
	__HAL_RCC_GPIOC_CLK_ENABLE();	//开启GPIOC的时钟
	
	/*GPIO初始化*/
	GPIO_InitTypeDef GPIO_InitStructure;
	GPIO_InitStructure.Mode     = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStructure.Pin      = GPIO_PIN_10;
	GPIO_InitStructure.Speed    = GPIO_SPEED_FREQ_HIGH;
	HAL_GPIO_Init(GPIOC, &GPIO_InitStructure);					//将PC10引脚初始化为推挽输出
	
	GPIO_InitStructure.Mode     = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStructure.Pin      = GPIO_PIN_15 | GPIO_PIN_8;
	GPIO_InitStructure.Speed    = GPIO_SPEED_FREQ_HIGH;
	HAL_GPIO_Init(GPIOA, &GPIO_InitStructure);					//将PA15和PA8引脚初始化为推挽输出
	
	GPIO_InitStructure.Mode 		= GPIO_MODE_INPUT;
	GPIO_InitStructure.Pull     = GPIO_PULLUP;
	GPIO_InitStructure.Pin      = GPIO_PIN_11;
	GPIO_InitStructure.Speed    = GPIO_SPEED_FREQ_HIGH;
	HAL_GPIO_Init(GPIOC, &GPIO_InitStructure);					//将PA8引脚初始化为上拉输入
	
	/*设置默认电平*/
	SPI_W_SS(1);												//SS默认高电平
	SPI_W_SCK(0);											//SCK默认低电平
}

/*协议层*/

/**
  * 函    数：SPI起始
  * 参    数：无
  * 返 回 值：无
  */
void SPI_Start(void)
{
	SPI_W_SS(0);				//拉低SS，开始时序
}

/**
  * 函    数：SPI终止
  * 参    数：无
  * 返 回 值：无
  */
void SPI_Stop(void)
{
	SPI_W_SS(1);				//拉高SS，终止时序
}

/**
  * 函    数：SPI交换传输一个字节，使用SPI模式0
  * 参    数：ByteSend 要发送的一个字节
  * 返 回 值：接收的一个字节
  */
uint8_t SPI_SwapByte(uint8_t ByteSend)
{
	uint8_t i, ByteReceive = 0x00;					//定义接收的数据，并赋初值0x00，此处必须赋初值0x00，后面会用到
	
	for (i = 0; i < 8; i ++)						//循环8次，依次交换每一位数据
	{
		SPI_W_MOSI(ByteSend & (0x80 >> i));		//使用掩码的方式取出ByteSend的指定一位数据并写入到MOSI线
		SPI_W_SCK(1);								//拉高SCK，上升沿移出数据
		if (SPI_R_MISO() == 1){ByteReceive |= (0x80 >> i);}	//读取MISO数据，并存储到Byte变量
																//当MISO为1时，置变量指定位为1，当MISO为0时，不做处理，指定位为默认的初值0
		SPI_W_SCK(0);								//拉低SCK，下降沿移入数据
	}
	return ByteReceive;								//返回接收到的一个字节数据
}
